Study/Kubernetes-Helm/Kubernetes-Exercise/Ingress/ingress-logs.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-logs
  namespace: logs
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-monitor.marcogiorgio.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
            path: /
